# night-engine

./: .gitignore  .gitmodules  Cargo.toml  jNbA2VoBtbARo9Aqq0lwYirxs3mYEfNg  storage_index.redb
src/: main.rs
src/assets/: asset_loader.rs  mesh_data_manager.rs  mod.rs  streaming_session.rs  texture_data.rs  type_registry.rs  vertex_data.rs
src/base_objects/: base_object.rs  mod.rs
src/util/: mod.rs
