[package]
name = "night-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
vulkanlib = {path="modules/vulkan-lib"}
asset-importer = { version = "0.4", features = ["default"] }
glam = { version = "0.30", features = ["serde"] }
redb = { version = "3.1"}
bincode = { version = "2.0", features = ["serde", "default"] }
serde = { version = "1.0.228", features = ["derive"] }
rand = "0.10.0-rc.5"